--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/employee
-spring.datasource.password=12345
 spring.datasource.username=postgres
+spring.datasource.password=postgres
+#spring.datasource.password=12345
 
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
