--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,12 @@
             <version>2.9.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.8.0</version>
+        </dependency>
+
 
     </dependencies>
 
