--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,22 @@
         </dependency>
 
 
+
+        <dependency>
+            <groupId>com.gembox</groupId>
+            <artifactId>gembox-spreadsheet</artifactId>
+            <version>1.1.1292</version> <!-- You can choose other version -->
+        </dependency>
+
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>com.gembox</id>
+            <name>GemBox API</name>
+            <url>https://gemboxsoftware.com/repo/</url>
+        </repository>
+    </repositories>
 
     <build>
         <plugins>
