--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,11 +7,14 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/employee
 spring.datasource.username=postgres
-#spring.datasource.password=postgres
-spring.datasource.password=12345
+spring.datasource.password=postgres
+#spring.datasource.password=12345
 
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
+
+
+spring.jackson.serialization.write-dates-as-timestamps=false
 
 
 
