--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,13 @@
         </dependency>
 
 
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itextpdf</artifactId>
+            <version>5.5.10</version>
+        </dependency>
+
+
     </dependencies>
 
     <repositories>
