--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,12 @@
 server.port=8081
 
+spring.rabbitmq.addresses=localhost:5672
+spring.rabbitmq.listener.simple.retry.enabled=true
+spring.rabbitmq.listener.simple.retry.initial-interval=3s
+spring.rabbitmq.listener.simple.retry.max-interval=10s
+spring.rabbitmq.listener.simple.retry.multiplier=2
+
+
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
