elastic search start

--- a/RabbitExchange/src/main/resources/application.properties
+++ b/RabbitExchange/src/main/resources/application.properties
@@ -18,3 +18,6 @@ spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/employee_log
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 #spring.datasource.password=12345
+
+
+elasticsearch.url=url
