--- a/RabbitExchange/pom.xml
+++ b/RabbitExchange/pom.xml
@@ -82,6 +82,13 @@
             <scope>runtime</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+            <version>2.6.3</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
