--- a/RabbitExchange/src/main/resources/application.properties
+++ b/RabbitExchange/src/main/resources/application.properties
@@ -20,4 +20,4 @@ spring.datasource.password=postgres
 #spring.datasource.password=12345
 
 
-elasticsearch.url=url
+elasticsearch.url=localhost:9200
